# 2imc00-ros-sample

./: .gitignore  README.md  docker-compose.yml
base/: Dockerfile
cmd_wheel/: package.xml  setup.cfg  setup.py
cmd_wheel/cmd_wheel/: wheel_member_function.py
communication_interfaces/: CMakeLists.txt  package.xml
communication_interfaces/action/: DestroyObstacle.action
communication_interfaces/msg/: DestroyProgress.msg
controller/: CMakeLists.txt  package.xml
controller/include/controller/: gpp_engine.c  gpp_engine.h  gpp_library.c  gpp_library.h  gpp_wrapper.c  gpp_wrapper.h
controller/src/: controller.cif  controller_member_function.cpp
distance_sensor/: package.xml  setup.py
distance_sensor/distance_sensor/: sensor_member_function.py
environment_scanner/: package.xml  setup.cfg  setup.py
environment_scanner/environment_scanner/: scanner_member_function.py
obstacle_destroyer/: package.xml  setup.cfg  setup.py
obstacle_destroyer/obstacle_destroyer/: destroyer_member_function.py
robot_platform/: package.xml  setup.cfg  setup.py
robot_platform/robot_platform/: platform_member_function.py
web_controller/: package.xml  setup.cfg  setup.py
web_controller/web_controller/: controller_member_function.py
web_controller/web_controller/static/: index.html
web_controller/web_controller/static/assets/: main.js  style.css
