<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>web_controller</name>
  <version>1.0.0</version>
  <description>Web interface for command line wheel.</description>
  <maintainer email="b.wesselink@recognize.nl">b.wesselink</maintainer>
  <license>LGPL-3.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
